# GetStart_C-

./: CMakeLists.txt  create.sh  main.cpp  make.sh
include/: Auto_Head.h
system/include/: system.h
